# polybot

./: .gitignore  Cargo.toml  README.md  canary-min.toml  canary.toml  clippy_out.txt  handoff.md  migration.md  mm-live-canary.toml  mm-live-copy-canary.toml  mm-live-rewardfarm-canary.toml  mm-paper.toml  mm-shadow.toml  relationships.toml  rust_out  rust_test_out.txt  test_output.txt
crates/app/: Cargo.toml
crates/app/src/: coordinator.rs  detector.rs  kill.rs  lib.rs  logbuf.rs  lp_pool.rs  main.rs  positions.rs  publisher.rs  stats.rs  wiring.rs
crates/app/src/strategy/: arb.rs  copy.rs  host.rs  mm.rs  mod.rs  quote_policy.rs  reward_score.rs  signals.rs  stub.rs
crates/app/src/strategy/btc5m/: entry.rs  market.rs  mod.rs  model.rs  settle.rs  shadow.rs
crates/app/tests/: config_smoke.rs  e2e_paper.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: core.rs  lib.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: book.rs  fees.rs  instrument.rs  lib.rs  num.rs
crates/engine/: Cargo.toml
crates/engine/benches/: hot_path.rs
crates/engine/src/: class1.rs  class2.rs  class3.rs  dedup.rs  lib.rs  lp.rs  walker.rs
crates/execution/: Cargo.toml
crates/execution/src/: auth.rs  basket.rs  fills.rs  lib.rs  live.rs  maker.rs  paper_maker.rs  quote_manager.rs  reconcile.rs  relayer.rs  secrets.rs  sign.rs  split_venue.rs  user_ws.rs  venue.rs
crates/execution/tests/fixtures/: auth_vectors.json  sign_vectors.json  sign_vectors_v2.json
crates/execution/tests/fixtures/clob_responses/: cancel_idempotent.json  cancel_ok.json  open_orders_empty.json  open_orders_mixed.json  order_matched.json  order_placed_live.json  order_post_only_rejected.json  order_processing_error.json  order_unmatched.json  trades_for_order.json  trades_maker_fills.json
crates/ingestion/: Cargo.toml
crates/ingestion/src/: clob.rs  confluence.rs  data_api.rs  decimal.rs  gamma.rs  lib.rs  livebook.rs  rest.rs  shard.rs  smart_money.rs  spot.rs  stats.rs  supervisor.rs  sync.rs  ws.rs
crates/ingestion/tests/: replay.rs
crates/registry/: Cargo.toml
crates/registry/src/: components.rs  gamma.rs  intern.rs  lib.rs  partitions.rs  relationships.rs  segment.rs
crates/registry/tests/fixtures/: clob_book.json  clob_markets.json  clob_time.json  gamma_events.json  gamma_markets.json  ws_book.json  ws_last_trade_price.json  ws_price_change.json
crates/risk/: Cargo.toml
crates/risk/src/: inventory.rs  lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  lots.rs  read.rs  writer.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs  render.rs  run.rs  state.rs  ui.rs
deploy/: btc5m_report.py  copybot.service  setup.sh  status.sh
docs/: RECON-M5-V2-1271.md  RECON-M5-V2.md  RECON-M5.md
docs/recon/: RECON.md
docs/superpowers/plans/: 2026-06-12-arb-m1-engine.md  2026-06-12-arb-m2-ingestion.md  2026-06-12-arb-m3-paper.md  2026-06-12-arb-m4-tui.md  2026-06-13-arb-m5-live.md  2026-06-15-multi-strategy-platform.md  2026-06-24-reward-farming-mm-core.md  2026-06-25-m6-deposit-wallet-relayer.md  2026-06-25-reward-farming-mm-spec2-phaseA.md  2026-06-25-reward-farming-mm-spec2-phaseB.md  2026-06-28-smart-money-backtest.md  2026-06-29-smart-money-copy-executor.md  2026-07-13-btc-5m-phase01-shadow-harness.md  2026-07-13-btc-5m-phase2-micro-taker.md
docs/superpowers/specs/: 2026-06-12-polymarket-arb-bot-v2-design.md  2026-06-13-arb-m5-live-design.md  2026-06-15-multi-strategy-engine-core-design.md  2026-06-15-multi-strategy-platform-design.md  2026-06-24-reward-farming-mm-core-design.md  2026-06-25-m6-deposit-wallet-relayer-design.md  2026-06-25-reward-farming-mm-spec2-design.md  2026-06-28-smart-money-backtest-design.md  2026-06-29-smart-money-copy-executor-design.md  2026-07-13-btc-5m-strategy-design.md
