[workspace]
resolver = "3"
members = [
    "crates/core", "crates/engine", "crates/config", "crates/registry",
    "crates/ingestion", "crates/store", "crates/risk", "crates/execution", "crates/app",
    "crates/tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
pm-core = { path = "crates/core" }
highs = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
proptest = "1"
criterion = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util", "signal"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
tempfile = "3"
hdrhistogram = "7"
pm-engine = { path = "crates/engine" }
pm-config = { path = "crates/config" }
pm-registry = { path = "crates/registry" }
pm-ingestion = { path = "crates/ingestion" }
pm-store = { path = "crates/store" }
pm-risk = { path = "crates/risk" }
pm-execution = { path = "crates/execution" }
pm-tui = { path = "crates/tui" }
ratatui = "0.29"
crossterm = "0.28"
tracing = "0.1"
alloy-primitives = "1"
alloy-sol-types = "1"
alloy-signer = "1"
alloy-signer-local = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.lints.rust]
unsafe_code = "deny"

[profile.release]
overflow-checks = true
