[package]
name = "pm-execution"
version.workspace = true
edition.workspace = true

[dependencies]
pm-core = { workspace = true }
pm-engine = { workspace = true }
pm-store = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "test-util"] }

[lints]
workspace = true
