[package]
name = "pm-execution"
version.workspace = true
edition.workspace = true

[dependencies]
pm-core = { workspace = true }
pm-engine = { workspace = true }
pm-store = { workspace = true }
# M6 RelayerClient::new gates on the `[live]` relayer knobs; pm-config is a leaf
# crate (serde structs only), so this introduces no dependency cycle.
pm-config = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
# User-WS maker-fill feed (Task 4.6). Mirrors pm-ingestion's market WS client;
# copied (not shared) to keep execution independent of ingestion, exactly as the
# rate limiter / decimal helpers are copied in `live.rs`.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "test-util"] }

[lints]
workspace = true
