[package]
name = "pm-ingestion"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
pm-core.workspace = true
pm-registry = { path = "../registry" }
pm-config = { path = "../config" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
reqwest = { workspace = true }
futures-util = "0.3"
hdrhistogram = "7"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest.workspace = true
tokio = { version = "1", features = ["rt", "macros", "time", "test-util"] }
